修改零件获取